--- a/infra/package.json
+++ b/infra/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.120.0",
-    "constructs": "^10.3.0"
+    "constructs": "^10.3.0",
+    "dotenv": "^16.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
