--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.0",
     "@aws-sdk/client-dynamodb": "^3.500.0",
+    "@aws-sdk/client-s3": "^3.965.0",
     "@aws-sdk/lib-dynamodb": "^3.500.0",
     "@photoscout/shared": "workspace:*",
+    "google-auth-library": "^10.5.0",
     "openai": "^6.15.0",
     "uuid": "^9.0.0"
   },
