--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,7 @@ ANTHROPIC_API_KEY=sk-ant-your-key-here
 # Set ENVIRONMENT=development to use DeepSeek
 DEEPSEEK_API_KEY=sk-your-key-here
 
+VITE_GOOGLE_CLIENT_ID=TK
+
 # AWS Region for deployment
 AWS_REGION=eu-central-1
